--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,7 @@
       manifest.json provides metadata used when your web app is added to the
       homescreen on Android. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
+
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
@@ -37,7 +38,7 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
-    <script src="../src/assets/js/common_scripts.min.js"></script>
-    <script src="../src/assets/js/functions.js"></script>
+    <!-- <script src="../src/assets/js/common_scripts.min.js"></script>
+    <script src="../src/assets/js/functions.js"></script> -->
   </body>
 </html>
